Add community pages
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/docs/classic-ml/getting-started/hyperparameter-tuning/index.mdx
+++ b/docs/docs/classic-ml/getting-started/hyperparameter-tuning/index.mdx
@@ -1,4 +1,4 @@
-# Hyperparameter Tuning Quickstart
+# Hyperparameter Tuning & Deployment Quickstart
 
 Master the complete MLOps workflow with MLflow's hyperparameter optimization capabilities. In this hands-on quickstart, you'll learn how to systematically find the best model parameters, track experiments, and deploy production-ready models.
 
