--- a/docs/docs/classic-ml/community-model-flavors/index.mdx
+++ b/docs/docs/classic-ml/community-model-flavors/index.mdx
@@ -686,7 +686,7 @@ predictions = pyfunc_model.predict(config_df)
 
 **Production deployment workflow:**
 
-```python
+```text
 # 1. Register model in MLflow Model Registry
 mlflow.register_model(
     model_uri="runs:/RUN_ID/model",
