add mlflow import
Signed-off-by: Tomu Hirata <tomu.hirata@gmail.com>

--- a/docs/docs/prompts/optimize-prompt.mdx
+++ b/docs/docs/prompts/optimize-prompt.mdx
@@ -35,7 +35,7 @@ Here's a simple example of optimizing a question-answering prompt:
 As a prerequisite, you need to install DSPy.
 
 ```bash
-$ pip install dspy>=2.6.0
+$ pip install dspy>=2.6.0 mlflow>=3.1.0
 ```
 
 Then, run the following code to register the initial prompt and optimize it.
